fix issue with horizontal scroll appearing on PC for movie cards

--- a/src/components/Results/MovieResults.module.css
+++ b/src/components/Results/MovieResults.module.css
@@ -60,7 +60,7 @@
 .movieContent {
     padding: 10px;
     text-align: center;
-    overflow: scroll;
+    overflow-y: auto;
     height: 10rem;
 }
 
