--- a/src/components/Results/NominatedMovies.module.css
+++ b/src/components/Results/NominatedMovies.module.css
@@ -87,7 +87,7 @@
     font-size: 1.5rem;
     line-height: 1.1;
     height: 60%;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .movieDesc h3 {
